# Coding-questions

./: CMakeLists.txt
Section 4 Data Structures/: FindKClosestElements.cpp  MaximumScore.cpp  OneInteger.cpp  UniqueCharacter.cpp  findKthLargest.cpp
Section 5 Bit Manipulation/: DecodeXORedArray.cpp  HammingDistance.cpp  LongestConsecutiveRunofBinary.cpp  PowerOf4.cpp  SortIntegersBits.cpp
Section 6 Bitmanipulation problems/: BitRangeofNumbers.cpp  DecodePermutation.cpp  MaximumScore.cpp  TotalHammingDistance.cpp  TripleswithBitwise.cpp
ZTM/: ContainerWIthMostWater.cpp
